# diamondfire_rs

./: .gitignore  diamondfire-unknown-unknown.json  diamondfire-unknown-unknown.json.template
bridgecg_diamondfire/: Cargo.toml
bridgecg_diamondfire/src/: extern_names.rs  lib.rs
diamondfire/: .gitignore  Cargo.toml  build.sh  doc.sh
diamondfire-linker/: Cargo.toml
diamondfire-linker/src/: main.rs
diamondfire-macros/: Cargo.toml
diamondfire-macros/src/: lib.rs
diamondfire-sys/: .gitignore  Cargo.toml
diamondfire-sys/src/: consts.rs  generated.rs  lib.rs  ty.rs  var.rs
diamondfire-sys/src/core/: array.rs  clone.rs  hint.rs  intrinsics.rs  macros.rs  mod.rs  ptr.rs
diamondfire-sys/src/core/marker/: copy.rs  mod.rs
diamondfire-sys/src/core/mem/: manually_drop.rs  maybe_uninit.rs  mod.rs
diamondfire-sys/src/core/ops/: mod.rs
diamondfire-sys/src/diamondfire/: generated.rs  ty.rs
diamondfire/.cargo/: config.toml
diamondfire/.cargo.bak/: config.toml
diamondfire/examples/: closure.rs  collatz_conjecture.rs  controlflow.rs  extern_fn.rs  fibonacci.rs  generic.rs  static.rs  transform.rs
diamondfire/src/: debug.rs  lib.rs  location.rs  vec3.rs
diamondfire/src/player/: mod.rs
diamondfire/src/std/: alloc.rs  boxed.rs  mod.rs  string.rs  vec.rs
diamondfire/src/std/string/: mod.rs  to_string.rs
diamondfire/src/value/: location.rs  mod.rs  particle.rs  potion.rs  sound.rs  string.rs  vec3.rs
diamondfire/src/value/text/: mod.rs  style.rs
linker_diamondfire/: Cargo.toml
linker_diamondfire/src/: main.rs
rustc_codegen_diamondfire/: Cargo.toml
rustc_codegen_diamondfire/src/: diag.rs  hash.rs  lib.rs
rustc_codegen_diamondfire/src/cfg/: analysis.rs  expr.rs  mod.rs  recover.rs  recovery.rs  stmt.rs
rustc_codegen_diamondfire/src/cfg/branches/: expr.rs  mod.rs  stmt.rs
rustc_codegen_diamondfire/src/cfr/: mod.rs  relation.rs  tree.rs
rustc_codegen_diamondfire/src/dfmir/: mod.rs  ty.rs  val.rs
rustc_codegen_diamondfire/src/dfmir/opt/: mod.rs
rustc_codegen_diamondfire/src/lower1/: const.rs  mod.rs  operand.rs  place.rs  rvalue.rs  stmt.rs  term.rs  ty.rs
rustc_codegen_diamondfire/src/lower1/rvalue/: binop.rs  mod.rs
