[package]
name        = "diamondfire-sys"
version     = "0.1.0"
authors     = [ "Totobird Creations <https://github.com/Totobird-Creations>" ]
description = "Low-level bindings for the Diamondfire block language compiler target"

edition = "2024"

build = "build/main.rs"

[features]
rank_noble    = [ ]
rank_emperor  = [ "rank_noble"    ]
rank_mythic   = [ "rank_emperor"  ]
rank_overlord = [ "rank_mythic"   ]
rank_dev      = [ "rank_overlord" ]
all_sounds = [ ]

[package.metadata.docs.rs]
rustc-args   = ["--cfg", "diamondfiresys_docsrs"]
rustdoc-args = ["--cfg", "diamondfiresys_docsrs"]


[lints.rust]
unused_parens       = "allow"
internal_features   = "allow"
incomplete_features = "allow"

[lints.clippy]
empty_doc_comments = "allow"


[build-dependencies.serde]
version  = "1.0"
features = [ "derive" ]

[build-dependencies.serde_json]
version = "1.0"
