[package]
name        = "diamondfire"
version     = "0.1.0"
authors     = [ "Totobird Creations <https://github.com/Totobird-Creations>" ]
description = "High-level interface for the Diamondfire block language compiler target"

edition = "2024"

[features]
rank_noble    = [ "diamondfire-sys/rank_noble" ]
rank_emperor  = [ "diamondfire-sys/rank_emperor",   "rank_noble"    ]
rank_mythic   = [ "diamondfire-sys/rank_mythic",    "rank_emperor"  ]
rank_overlord = [ "diamondfire-sys/rank_overlord",  "rank_mythic"   ]
rank_dev      = [ "diamondfire-sys/rank_dev",       "rank_overlord" ]


[lints.rust]
unused_parens     = "allow"
internal_features = "allow"


[dependencies.diamondfire-sys]
path = "../diamondfire-sys"

[dependencies.diamondfire-macros]
path = "../diamondfire-macros"
