[package]
name        = "rustc_codegen_diamondfire"
version     = "0.1.0"
authors     = [ "Totobird Creations <https://github.com/Totobird-Creations>" ]
description = "Rust compiler codegen for the DiamondFire block language compiler target"

rust-version = "1.94"
edition      = "2024"

[package.metadata.rust-analyzer]
rustc_private = true

[lib]
crate-type = [ "cdylib" ]


[lints.rust]
unused_parens = "allow"

[lints.clippy]
double_parens = "allow"
